--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "next": "10.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-jss": "^10.6.0"
+    "react-google-recaptcha": "^2.1.0",
+    "react-jss": "^10.6.0",
+    "react-toastify": "^7.0.4"
   },
   "devDependencies": {
     "@types/react": "^17.0.5",
